# cam_server

./: CMakeLists.txt  ProjectSummary.md  README.md  build.sh  deploy_fix.sh  install_requirements.sh
src/: ai_worker.py  python_bridge.cpp  python_bridge.h  srt_ai_server.cpp
